--- a/default/app/views/_shared/partials/reportes.phtml
+++ b/default/app/views/_shared/partials/reportes.phtml
@@ -1,26 +1,26 @@
 <footer>
 	<div class="row">
-		<div class="well">
+		<div class="well half-transparent">
 			<h2>TITULO REPORTE</h2>
 			<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</div>
-		<div class="well">
+		<div class="well half-transparent">
 			<h2>TITULO REPORTE</h2>
 			<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</div>
-		<div class="well">
+		<div class="well half-transparent">
 			<h2>TITULO REPORTE</h2>
 			<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</div>
-		<div class="well">
+		<div class="well half-transparent">
 			<h2>TITULO REPORTE</h2>
 			<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</div>
-		<div class="well">
+		<div class="well half-transparent">
 			<h2>TITULO REPORTE</h2>
 			<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
