--- a/default/app/views/_shared/templates/default.phtml
+++ b/default/app/views/_shared/templates/default.phtml
@@ -12,18 +12,20 @@
   <?= Html::includeCss()?>
 </head>
 <body>
-	<div class="row">
-		<div class="col-xs-12"><?php View::partial('header') ?></div>
-	</div>
+
 	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 no-side-padding"><?php View::partial('header') ?></div>
+		</div>
 		<div class="row">
 			<div class="col-md-10"><?php View::content(); ?></div>
 			<div class="col-md-2"><?php View::partial('reportes')?></div>
 
 		</div>
+		<div class="row">
+			<div class="col-xs-12 no-side-padding"><?php View::partial('footer') ?></div>
+		</div>
 	</div>
-	<div class="row">
-		<div class="col-xs-12"><?php View::partial('footer') ?></div>
-	</div>
+
 </body>
 </html>
