--- a/default/app/views/_shared/templates/default.phtml
+++ b/default/app/views/_shared/templates/default.phtml
@@ -18,6 +18,7 @@
 			<div class="col-xs-12 no-side-padding"><?php View::partial('header') ?></div>
 		</div>
 		<div class="row">
+			<div class="col-xs-12 no-side-padding"><?php View::partial('menu') ?></div>
 			<div class="col-md-10"><?php View::content(); ?></div>
 			<div class="col-md-2"><?php View::partial('reportes')?></div>
 
