--- a/default/app/views/_shared/partials/header.phtml
+++ b/default/app/views/_shared/partials/header.phtml
@@ -1,4 +1,7 @@
 <header>
-<?php echo Html::img('logo.png','','class="img-responsive"')?>
+	<h1 class="tit_cabecera">
+		<strong>Denúnciaty</strong>
+	</h1>
+<?php echo Html::img('img_cabecera.png','','class="img-responsive"')?>
 </header>
 
