--- a/default/app/views/_shared/partials/reportes.phtml
+++ b/default/app/views/_shared/partials/reportes.phtml
@@ -1,28 +1,40 @@
 
 <div class="row">
-	<div class="well half-transparent">
-		<h2>TITULO REPORTE</h2>
-		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">TITULO REPORTE</h3>
+		</div>
+		<div class="panel-body">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</div>
 	</div>
-	<div class="well half-transparent">
-		<h2>TITULO REPORTE</h2>
-		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">TITULO REPORTE</h3>
+		</div>
+		<div class="panel-body">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</div>
 	</div>
-	<div class="well half-transparent">
-		<h2>TITULO REPORTE</h2>
-		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">TITULO REPORTE</h3>
+		</div>
+		<div class="panel-body">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</div>
 	</div>
-	<div class="well half-transparent">
-		<h2>TITULO REPORTE</h2>
-		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	</div>
-	<div class="well half-transparent">
-		<h2>TITULO REPORTE</h2>
-		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">TITULO REPORTE</h3>
+		</div>
+		<div class="panel-body">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</div>
 	</div>
 </div>
+
