--- a/default/app/views/index/index.phtml
+++ b/default/app/views/index/index.phtml
@@ -1,3 +1,3 @@
 <div>
-    <?php echo html::img('zoidberg.jpg','','class="img-responsive half-transparent"');?>
+    <?php //echo html::img('zoidberg.jpg','','class="img-responsive half-transparent"');?>
 </div>
