--- a/default/app/views/_shared/partials/menu.phtml
+++ b/default/app/views/_shared/partials/menu.phtml
@@ -1,5 +1,5 @@
 <nav id="menu-principal" class="navbar navbar-default">
-	<div class="container-fluid">
+	<div class="container-fluid no-side-padding">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed"
@@ -28,9 +28,12 @@
 			</ul>
 			<form class="navbar-form navbar-right" role="search">
 				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Search">
+					<input type="text" class="form-control" placeholder="Usuario">
 				</div>
-				<button type="submit" class="btn btn-default">Submit</button>
+				<div class="form-group">
+					<input type="password" class="form-control" placeholder="Contraseña">
+				</div>
+				<button type="submit" class="btn btn-default">Entrar</button>
 			</form>
 		</div>
 		<!-- /.navbar-collapse -->
