--- a/default/app/views/_shared/partials/footer.phtml
+++ b/default/app/views/_shared/partials/footer.phtml
@@ -1,10 +1,10 @@
 <footer>
 	<div class="row">
-		<div class="col-md-12 text-center">
-			<p>Denúnciaty 2015</p>
+		<div class="col-md-12 text-center no-side-padding">
+			Denúnciaty 2015
 		</div>
 
-		<div class="col-md-12 text-center"> 
+		<div class="col-md-12 text-center no-side-padding"> 
 		<?= 'Ejecutado en ' , round((microtime(1)-START_TIME)*1000,4) , ' ms. usando ' , number_format(memory_get_usage() / 1048576, 2) , ' MB de memoria';?>
 		</div>
 	</div>
