--- a/default/app/views/_shared/partials/menu.phtml
+++ b/default/app/views/_shared/partials/menu.phtml
@@ -1,5 +1,5 @@
 <nav id="menu-principal" class="navbar navbar-default">
-	<div class="container-fluid no-side-padding">
+	<div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed"
