--- a/default/app/views/_shared/templates/default.phtml
+++ b/default/app/views/_shared/templates/default.phtml
@@ -17,19 +17,25 @@
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-xs-12 no-side-padding"><?php View::partial('menu') ?></div>
+			<div class="col-xs-12 no-side-margin no-side-padding"><?php View::partial('menu') ?></div>
 			<div class="col-xs-12">
 				<div class="row">
+					<div class="col-xs-12">
+						<hr>
+					</div>
 					<div class="col-xs-12 no-side-padding"><?php View::partial('header') ?></div>
-					<div class="col-xs-12"><hr></div>
+					<div class="col-xs-12">
+						&nbsp;
+					</div>
 					<div class="col-md-10"><?php View::content(); ?></div>
 					<div class="col-md-2"><?php View::partial('reportes')?></div>
+					<div class="col-xs-12 footer"><?php View::partial('footer') ?></div>
 				</div>
 			</div>
 
 		</div>
 		<div class="row">
-			<div class="col-xs-12 no-side-padding"><?php View::partial('footer') ?></div>
+			
 		</div>
 	</div>
 
