--- a/default/app/views/_shared/partials/menu.phtml
+++ b/default/app/views/_shared/partials/menu.phtml
@@ -15,7 +15,7 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li class=""><a href="#">Usuarios <span class="sr-only">(current)</span></a></li>
+				<li class=""><a href="#">Usuarios</a></li>
 				<li class="dropdown"><a href="#" class="dropdown-toggle"
 					data-toggle="dropdown" role="button" aria-haspopup="true"
 					aria-expanded="false">Reportes <span class="caret"></span></a>
@@ -26,12 +26,15 @@
 						<li><a href="#">Todos</a></li>
 					</ul></li>
 			</ul>
+			
 			<form class="navbar-form navbar-right" role="search">
 				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Usuario">
+					<label>Acceso administración &nbsp;</label> <input type="text"
+						class="form-control" placeholder="Usuario">
 				</div>
 				<div class="form-group">
-					<input type="password" class="form-control" placeholder="Contraseña">
+					<input type="password" class="form-control"
+						placeholder="Contraseña">
 				</div>
 				<button type="submit" class="btn btn-default">Entrar</button>
 			</form>
