Añadido método actualización de datos de usuario

--- a/api/app/views/_shared/templates/json.phtml
+++ b/api/app/views/_shared/templates/json.phtml
@@ -2,4 +2,4 @@
 /* mime type para el contenido */
 header ( 'Content-type: application/json' );
 
-echo json_encode ( $data );
+echo json_encode ( $data ); ?>
