Añadida documentación y comentarios

--- a/api/app/views/_shared/templates/default.phtml
+++ b/api/app/views/_shared/templates/default.phtml
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset=<?= APP_CHARSET ?>>
-<title>KumbiaPHP Framework</title>
+<title>Denunciaty</title>
   <?php Tag::css('kumbia')?>
   <?php Tag::css('bootstrap/bootstrap.min')?>
   <?php echo Tag::js('jquery/jquery.min')?>
