--- a/api/app/views/_shared/scaffolds/kumbia/ver.phtml
+++ b/api/app/views/_shared/scaffolds/kumbia/ver.phtml
@@ -23,5 +23,5 @@
 		<a href="../">Listado</a> <a href="../crear/">Crear registro</a>
 	</div>
 <?php
-endif;	<pre><?php //var_dump($data)?></pre>
+endif;	?><pre><?php //var_dump($data)?></pre>
 </div>
