--- a/default/app/views/_shared/partials/menu.phtml
+++ b/default/app/views/_shared/partials/menu.phtml
@@ -26,18 +26,31 @@
 						<li><a href="#">Todos</a></li>
 					</ul></li>
 			</ul>
-			
-			<form class="navbar-form navbar-right" role="search">
+			<?php if(!$_SESSION['KUMBIA_AUTH_VALID']['default']==1){ ?> 
+			<?php echo Form::open('index/login','post','class="navbar-form navbar-right"')?>
+			<div>
 				<div class="form-group">
-					<label>Acceso administración &nbsp;</label> <input type="text"
-						class="form-control" placeholder="Usuario">
+					<label>Acceso administración &nbsp;</label> <input name="usuario"
+						type="text" class="form-control" placeholder="Usuario">
 				</div>
 				<div class="form-group">
-					<input type="password" class="form-control"
+					<input name="password" type="password" class="form-control"
 						placeholder="Contraseña">
 				</div>
 				<button type="submit" class="btn btn-default">Entrar</button>
-			</form>
+			</div>
+			<?php echo Form::close();?>
+			<?php }else{?>
+			<ul class="nav navbar-nav navbar-right">
+				<li class=""><a id="cerrar-sesion" class="text-error" href="#">Cerrar sesión</a></li>
+			</ul>
+			<p class="navbar-text navbar-right">
+				Bienvenido, <a href="#" class="navbar-link"><?php echo Auth::get('nombre_usuario')?>&nbsp;</a>
+			</p>
+			
+			
+			<?php }?>
+		
 		</div>
 		<!-- /.navbar-collapse -->
 	</div>
