--- a/default/app/views/_shared/scaffolds/kumbia/index.phtml
+++ b/default/app/views/_shared/scaffolds/kumbia/index.phtml
@@ -1,20 +1,18 @@
 <div id="scaffold">
 <?php View::content()?>
 <h1><?= ucwords("$model"),": <span>$action_name</span>" ?></h1>
-	<div class="actions">
+<div class="actions">
     <?= Html::linkAction("crear/",'Crear registro', 'class="btn btn-primary"')?>
 </div>
 <?php if ($data->items) : ?>
 <table class="t">
-		<thead>
-			<tr>
+    <thead><tr>
     <?php foreach (current($data->items)->fields as $field) : ?>
         <th><?= (current($data->items)->get_alias($field))?></th>
     <?php endforeach?>
 	<th>Acciones</th>
-			</tr>
-		</thead>
-		<tbody>
+    </tr></thead>
+	<tbody>
     <?php foreach ($data->items as $item) : ?>
         <tr>
             <?php foreach ($item->fields as $field) : ?>
@@ -24,16 +22,16 @@
 			<?= Html::linkAction("editar/$item->id",'Editar')?> |
 			<?= Html::linkAction("borrar/$item->id",'Borrar', 'onclick="return confirm(\'¿Está seguro?\')"')?>
 			</td>
-			</tr>
+        </tr>
     <?php endforeach?>
 	</tbody>
-	</table>
+</table>
 <?php View::partial('paginators/digg', false, array('page' => $data ,'url' => Router::get('controller_path').'/index')); ?>
 
 <?php else : // Si no hay items?>
 <h2>No hay ningún registro</h2>
-<?php
-endif;
+<?php endif ?>
+
 </div>
 
 <?php //var_dump($data)?>
