--- a/default/app/views/_shared/scaffolds/kumbia/ver.phtml
+++ b/default/app/views/_shared/scaffolds/kumbia/ver.phtml
@@ -9,19 +9,18 @@
 	</ul>
 
 	<div class="actions">
-		<a href="../" class="btn btn-default">Listado</a> <a href="../crear/"
-			class="btn btn-primary">Crear registro</a> <a
-			href="../editar/<?= $data->id?>" class="btn btn-warning">Editar</a> <a
-			class="del btn btn-danger" title="¿Seguro que quiere borrar?"
-			href="../borrar/<?= $data->id?>"
-			onclick="return confirm('¿Está seguro?');">Borrar</a>
+		<a href="../" class="btn btn-default">Listado</a>
+		<a href="../crear/" class="btn btn-primary">Crear registro</a>
+		<a href="../editar/<?= $data->id?>" class="btn btn-warning">Editar</a>
+		<a class="del btn btn-danger" title="¿Seguro que quiere borrar?" href="../borrar/<?= $data->id?>" onclick="return confirm('¿Está seguro?');">Borrar</a>
 	</div>
 <?php else : ?>
 	<?php header("HTTP/1.0 404 Not Found")?>
 	<h1>No existe</h1>
 	<div class="actions">
-		<a href="../">Listado</a> <a href="../crear/">Crear registro</a>
+		<a href="../">Listado</a>
+		<a href="../crear/">Crear registro</a>
 	</div>
-<?php
-endif;	<pre><?php //var_dump($data)?></pre>
-</div>
+<?php endif ?>
+	<pre><?php //var_dump($data)?></pre>
+	</div>
