--- a/default/app/views/_shared/partials/menu.phtml
+++ b/default/app/views/_shared/partials/menu.phtml
@@ -16,7 +16,7 @@
 		<div class="collapse navbar-collapse" id="navbar-collapse">
 		<?php if($_SESSION['KUMBIA_AUTH_VALID']['default']==1){ ?> 
 			<ul class="nav navbar-nav">
-				<li class=""><a href="#">Usuarios</a></li>
+				<li class=""><?php echo Html::link('usuarios', 'Usuarios')?></li>
 				<li class="dropdown"><a href="#" class="dropdown-toggle"
 					data-toggle="dropdown" role="button" aria-haspopup="true"
 					aria-expanded="false">Reportes <span class="caret"></span></a>
