Crud de usuarios, puliendo

--- a/default/app/views/_shared/partials/menu.phtml
+++ b/default/app/views/_shared/partials/menu.phtml
@@ -1,4 +1,4 @@
-<nav id="menu-principal" class="navbar navbar-default navbar-fixed-top">
+<nav id="menu-principal" class="navbar navbar-default navbar-fixed-top <?php if(!Auth::is_valid()){echo 'white-bg';}?>">
 	<div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
