--- a/default/app/views/_shared/templates/default.phtml
+++ b/default/app/views/_shared/templates/default.phtml
@@ -3,7 +3,9 @@
 <head>
 <meta charset=<?= APP_CHARSET ?>>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>KumbiaPHP Framework</title>
+<title>Denúnciaty</title>
+<link rel="shortcut icon" href="/default/public/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/default/public/favicon.ico" type="image/x-icon">
   <?php echo Tag::css('kumbia')?>
   <?php echo Tag::css('bootstrap/bootstrap.min')?>
   <?php echo Tag::css('style')?>
