--- a/default/app/views/_shared/partials/reportes.phtml
+++ b/default/app/views/_shared/partials/reportes.phtml
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row reportes">
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<h3 class="panel-title">TITULO REPORTE</h3>
@@ -35,6 +35,17 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</div>
+		
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">TITULO REPORTE</h3>
+		</div>
+		<div class="panel-body">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+				eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</div>
+		
 	</div>
 </div>
 
