implementando baneo manual, falta cron

--- a/default/app/views/_shared/templates/default.phtml
+++ b/default/app/views/_shared/templates/default.phtml
@@ -4,7 +4,8 @@
 <meta charset=<?= APP_CHARSET ?>>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Denúnciaty</title>
-<link rel="shortcut icon" href="/default/public/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/default/public/favicon.ico"
+	type="image/x-icon">
 <link rel="icon" href="/default/public/favicon.ico" type="image/x-icon">
   <?php echo Tag::css('kumbia')?>
   <?php echo Tag::css('bootstrap/bootstrap.min')?>
@@ -19,7 +20,6 @@
   <?= Html::includeCss()?>
 </head>
 <body>
-
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 no-side-margin no-side-padding"><?php View::partial('menu') ?></div>
