--- a/default/app/views/usuarios/ver.phtml
+++ b/default/app/views/usuarios/ver.phtml
@@ -57,6 +57,10 @@
 						class="form-control" value="<?php echo $data->password?>" disabled>
 				</div>
 				<div class="form-group">
+					<label title="Denúnciaty Anti Cheat">D.A.C</label> <input name="dac" type="text"
+						class="form-control" value="<?php echo $data->dac?>" disabled>
+				</div>
+				<div class="form-group">
 					<label>Administrador</label> <input name="admin" type="text"
 						class="form-control" value="<?php if($data->admin==1){
 							echo 'Si';
