--- a/default/app/views/usuarios/editar.phtml
+++ b/default/app/views/usuarios/editar.phtml
@@ -84,7 +84,7 @@
 				</div>
 			</div>
 			<div class="col-md-12 text-center">
-				<button type="submit" class=" btn btn-default btn-lg btn-adelante">Guardar
+				<button type="submit" class=" btn btn-default btn-adelante">Guardar
 					datos</button>
 			</div>
 		</div>
