--- a/default/app/views/_shared/partials/menu.phtml
+++ b/default/app/views/_shared/partials/menu.phtml
@@ -17,7 +17,8 @@
 		<?php if(Auth::is_valid()){ ?> 
 			<ul class="nav navbar-nav">
 				<li class=""><?php echo Html::link('usuarios', 'Usuarios')?></li>
-				<li class="dropdown"><a href="#" class="dropdown-toggle"
+				<li class="dropdown">
+                    <a href="" class="dropdown-toggle"
 					data-toggle="dropdown" role="button" aria-haspopup="true"
 					aria-expanded="false">Reportes <span class="caret"></span></a>
 					<ul class="dropdown-menu">
